# cnctd_go

./: CLAUDE.md  Cargo.toml  README.md
src/: lib.rs
tests/: integration_tests.rs
